@@ -289,6 +289,7 @@ func testCGRConfigReloadSupplierS(t *testing.T) {
 		AttributeSConns:     []string{},
 		RateSConns:          []string{},
 		RALsConns:           []string{},
+		RateSConns:          []string{},
 		IndexedSelects:      true,
 		DefaultRatio:        1,
 	}
